--- a/travelRecommendation/travel_recommendation.html
+++ b/travelRecommendation/travel_recommendation.html
@@ -7,6 +7,7 @@
     <title>Travel Recommendation</title>
 </head>
 <body>
+    <!-- navbar -->
     <header>
     <nav class = "navbar">
         <li><h1>Travel</h1></li>
@@ -18,8 +19,26 @@
         <li><input type="text" id="conditionInput" class = "bar_one" placeholder="Enter a destination or keyword"> </li>
         <li><button id = "btnSearch">Search</button></li>
         <li><button id = "btnReset">Reset</button></li>
-    </div>  
+    </div>      
 </header>
+
+<!-- body -->
+ <section class ="intro">
+    <div class = "sideSocial">
+        <h2>Social Media</h2>
+        <div class = "sideSocial-fb"></div>
+    
+     </div>
+    
+     <div class = "mainTitle">
+        <h1>Travel</h1>
+     </div>
+ </section>
+ <div class = "subTitle">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae iste adipisci quod alias, dolorem architecto nostrum assumenda vitae facilis atque voluptas harum deserunt reiciendis, error temporibus beatae ipsum veritatis aliquid?</p>
+ </div>
+
+
     <script src = "./travel_recommendation.js"></script>
 </body>
 </html>
