--- a/travelRecommendation/pages/about.html
+++ b/travelRecommendation/pages/about.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel = "stylesheet" href = "travel.css">
-    <title>Travel Recommendation</title>
+    <link rel = "stylesheet" href = "../travel.css">
+    <title>About Us</title>
 </head>
 <body>
     <!-- navbar -->
     <header>
     <nav class = "navbar">
         <li><h1>Travel</h1></li>
-        <li><a href = "./travel_recommendation.html">Home</a></li>
-        <li><a href = "./pages/about.html">About us</a></li>
-        <li><a href = "./pages/contact.html">Contact Us</a></li>   
+        <li><a href = "../travel_recommendation.html">Home</a></li>
+        <li><a href = "./about.html">About us</a></li>
+        <li><a href = "./contact.html">Contact Us</a></li>   
     </nav>
     <div class = "searchBar">
         <li><input type="text" id="conditionInput" class = "bar_one" placeholder="Enter a destination or keyword"> </li>
@@ -32,7 +32,7 @@
      </div>
     
      <div class = "mainTitle">
-        <h1>Travel</h1>
+        <h1>About Us</h1>
      </div>
  </section>
  <div class = "subTitle">
