--- a/travelRecommendation/pages/about.html
+++ b/travelRecommendation/pages/about.html
@@ -39,6 +39,9 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae iste adipisci quod alias, dolorem architecto nostrum assumenda vitae facilis atque voluptas harum deserunt reiciendis, error temporibus beatae ipsum veritatis aliquid?</p>
  </div>
 
+ <section class = "aboutUs">
+
+ </section>
 
     <script src = "./travel_recommendation.js"></script>
 </body>
