--- a/travelRecommendation/travel_recommendation.html
+++ b/travelRecommendation/travel_recommendation.html
@@ -39,6 +39,10 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae iste adipisci quod alias, dolorem architecto nostrum assumenda vitae facilis atque voluptas harum deserunt reiciendis, error temporibus beatae ipsum veritatis aliquid?</p>
  </div>
 
+ <div class = "bookNow">
+    <button>Book Now</button>
+ </div>
+
 
     <script src = "./travel_recommendation.js"></script>
 </body>
