--- a/travelRecommendation/pages/about.html
+++ b/travelRecommendation/pages/about.html
@@ -39,8 +39,17 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae iste adipisci quod alias, dolorem architecto nostrum assumenda vitae facilis atque voluptas harum deserunt reiciendis, error temporibus beatae ipsum veritatis aliquid?</p>
  </div>
 
- <section class = "aboutUs">
+<div class= "mainTitle">
+    <h1>Our Team</h1>
+</div>
+ 
 
+ <section class = "aboutUs">
+    <div class = "teamMember">
+        <h2>Created by</h2>
+        <h1>Oluwatope Folorunso</h1>
+        <br>
+    </div>
  </section>
 
     <script src = "./travel_recommendation.js"></script>
