--- a/travelRecommendation/pages/contact.html
+++ b/travelRecommendation/pages/contact.html
@@ -35,9 +35,9 @@
         <h1>Contact Us</h1>
      </div>
  </section>
- <div class = "subTitle">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae iste adipisci quod alias, dolorem architecto nostrum assumenda vitae facilis atque voluptas harum deserunt reiciendis, error temporibus beatae ipsum veritatis aliquid?</p>
- </div>
+ <div class = "contactUs">
+    <!--input fields for name email and message with send btn  -->
+</div>
 
 
     <script src = "./travel_recommendation.js"></script>
