--- a/travelRecommendation/travel_recommendation.html
+++ b/travelRecommendation/travel_recommendation.html
@@ -13,14 +13,22 @@
         <li><h1>Travel</h1></li>
         <li><a href = "./travel_recommendation.html">Home</a></li>
         <li><a href = "./pages/about.html">About us</a></li>
-        <li><a href = "./pages/contact.html">Contact Us</a></li>   
+        <li><a href = "./pages/contact.html">Contact Us</a></li>
+        <li><input type="text" id="searchCountries" class = "bar_one" placeholder="Enter a destination or keyword"> </li>
+        <li><button onclick="fetchData()">Search</button></li>
+        <li><button id = "clear">Clear</button></li>   
     </nav>
     <div class = "searchBar">
-        <li><input type="text" id="conditionInput" class = "bar_one" placeholder="Enter a destination or keyword"> </li>
-        <li><button id = "btnSearch">Search</button></li>
-        <li><button id = "btnReset">Reset</button></li>
+        
     </div>      
 </header>
+
+<!-- search results show here -->
+<div class="searchSpace">
+    <div id = "results">
+    </div>
+</div>
+
 
 <!-- body -->
  <section class ="intro">
