--- a/travelRecommendation/travel_recommendation.html
+++ b/travelRecommendation/travel_recommendation.html
@@ -14,20 +14,18 @@
         <li><a href = "./travel_recommendation.html">Home</a></li>
         <li><a href = "./pages/about.html">About us</a></li>
         <li><a href = "./pages/contact.html">Contact Us</a></li>
+
+        <!-- searchbar -->
         <li><input type="text" id="searchCountries" class = "bar_one" placeholder="Enter a destination or keyword"> </li>
-        <li><button onclick="fetchData()">Search</button></li>
-        <li><button id = "clear">Clear</button></li>   
-    </nav>
-    <div class = "searchBar">
-        
-    </div>      
+        <li><button onclick="searchCountry()">Search</button></li>
+        <li><button onclick ="resetSearch()">Clear</button></li>   
+    </nav>     
 </header>
 
 <!-- search results show here -->
-<div class="searchSpace">
     <div id = "results">
+        <ul></ul>
     </div>
-</div>
 
 
 <!-- body -->
