--- a/travelRecommendation/travel_recommendation.html
+++ b/travelRecommendation/travel_recommendation.html
@@ -17,8 +17,11 @@
 
         <!-- searchbar -->
         <li><input type="text" id="searchCountries" class = "bar_one" placeholder="Enter a destination or keyword"> </li>
-        <li><button onclick="searchCountry()">Search</button></li>
-        <li><button onclick="resetSearch()">Clear</button></li>   
+        <div class = "btnBox">
+            <li><button onclick="searchCountry()">Search</button></li>
+            <li><button onclick="resetSearch()">Clear</button></li> 
+        </div>
+          
     </nav>     
 </header>
 
