--- a/travelRecommendation/pages/contact.html
+++ b/travelRecommendation/pages/contact.html
@@ -32,6 +32,16 @@
  </section>
  <div class = "contactUs">
     <!--input fields for name email and message with send btn  -->
+    <h2>Name</h2>
+    <input type = "text" id = "name" class = "contactInput" placeholder= "Please enter your name"><br>
+    
+    <h2>Email</h2>
+    <input type = "text" id = "email" class = "contactInput" placeholder= "Please enter your email"><br>
+
+    <h2>Message</h2>
+    <textarea id="message" class= "messageBox" placeholder = "Enter your message"></textarea><br>
+
+    <button id= "submitMessage">Submit</button>
 </div>
 
 
