--- a/travelRecommendation/pages/contact.html
+++ b/travelRecommendation/pages/contact.html
@@ -45,6 +45,6 @@
 </div>
 
 
-    <script src = "./travel_recommendation.js"></script>
+    <script src = "../travel_recommendation.js"></script>
 </body>
 </html>
