--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
     <nav class = "navbar">
         <li><h1>Travel</h1></li>
-        <li><a href = "./travel_recommendation.html">Home</a></li>
+        <li><a href = "./index.html">Home</a></li>
         <li><a href = "./pages/about.html">About us</a></li>
         <li><a href = "./pages/contact.html">Contact Us</a></li>
 
